--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+
 /* Global Styles */
 :root {
     --primary-color: #032f3e;
@@ -45,8 +46,8 @@ section {
 
 /* Header */
 header {
-    background-color: var(--primary-color);
-    color: white;
+    background-color: #f9f9f9;
+    color:blue;
     padding: 20px 0;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
@@ -92,7 +93,7 @@ header .tagline {
     background-position: center;
     color: white;
     text-align: center;
-    padding: 100px 0;
+    padding: 0;
 }
 
 .hero-content {
@@ -115,8 +116,8 @@ header .tagline {
 
 .cta-button {
     display: inline-block;
-    background-color: var(--accent-color);
-    color: white;
+    background-color: whitesmoke;
+    color: blue;
     font-size: 1.2rem;
     padding: 15px 30px;
     border-radius: 50px;
