--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
 :root {
     --primary-color: #032f3e;
     --secondary-color: #10ac84;
-    --accent-color: #ff9900;
+    --accent-color: white;
     --text-color: #333;
     --light-color: #f8f9fa;
     --dark-color: #1a1a1a;
