--- a/styles.css
+++ b/styles.css
@@ -48,7 +48,7 @@ section {
 header {
     background-color: #f9f9f9;
     color:blue;
-    padding: 20px 0;
+    padding:0;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
